<resources>
    <string name="app_name">VGS Image Editor</string>
    <string name="admob_app_id">ca-app-pub-3542627195566460~3365490249</string>
    <string name="admob_native_ads">ca-app-pub-3542627195566460/2177251833</string>
    <string name="admob_interstitial_ads">ca-app-pub-3542627195566460/9864170166</string>
    <!--<string name="admob_banner_ads">ca-app-pub-3542627195566460/5597622094</string>-->
    <string name="admob_banner_ads">ca-app-pub-3940256099942544/6300978111</string>
    <string name="free_size">Free Size</string>
    <string name="square">Square</string>
    <string name="rotate">Rotate</string>
    <string name="done">Done</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale" translatable="false">Storage write permission is needed to save the image.</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="confirm_exit">Do you want to exit ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="lable_categories">Categories</string>
    <string name="label_man_styles">Man Styles</string>
    <string name="accessories">Accessories</string>
    <string name="makeover">Makeover</string>
    <string name="bg_eraser">Bg Eraser</string>
    <string name="label_blur">Blur</string>
    <string name="label_frames">Frames</string>
    <string name="label_new_frames">New Frames</string>
    <string name="label_edit_image">Edit Image</string>
    <string name="label_reset">Reset</string>
    <string name="label_done">Done</string>
    <string name="label_add_sticker">Add Sticker</string>
    <string name="label_flip">Flip</string>
    <string name="label_fade">Fade</string>
    <string name="label_colour">Colour</string>
    <string name="label_close">Close</string>
    <string name="label_back">Back</string>
    <string name="label_saturation">Saturation</string>
    <string name="label_contrast">Contrast</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_effects">Effects</string>
    <string name="label_filters">Filters</string>
    <string name="label_please_wait">Please Wait</string>
    <string name="image_processing">Image Processing</string>
    <string name="facebook_app_id">987992938215938</string>
    <string name="warning">No photos displayed</string>
    <string name="blur_progress">Blur Progress</string>
    <string name="blur">Blur</string>
    <string name="un_blur">Un Blur</string>
    <string name="brush">Brush</string>
    <string name="brush_size">Brush Size</string>
    <string name="zoom">Zoom</string>
    <string name="offset">Offset</string>
    <string name="please_wait">Please wait</string>
    <string name="image_saving">Image is saving</string>
    <string name="double_tap_to_edit">Double tap to Edit</string>
</resources>
