<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_pressed"
    android:orientation="vertical"
    tools:context=".activity.CropImageActivity">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:background="@color/bar_bg"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:weightSum="4.0">

        <Button
            android:id="@+id/freeSizeBtn"
            style="@style/button_text"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="freeSizeRationClick"
            android:text="@string/free_size" />

        <Button
            android:id="@+id/squareBtn"
            style="@style/button_text"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="squareRationClick"
            android:text="@string/square" />

        <Button
            android:id="@+id/rotate"
            style="@style/button_text"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="rotationClick"
            android:text="@string/rotate" />

        <Button
            android:id="@+id/done"
            style="@style/button_text"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="doneClick"
            android:text="@string/done" />
    </LinearLayout>


    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@id/header"
        android:adjustViewBounds="true"
        android:background="#00ffffff"
        android:scaleType="centerInside" />

    <include layout="@layout/layout_confirm_exit" android:layout_centerInParent="true" />


</RelativeLayout>