<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exitPopUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone"
    android:background="#ad000000">


    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000" />

    <LinearLayout
        android:layout_width="330.0dip"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5.0dip"
        android:background="@drawable/exit_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exit_text"
            android:layout_width="match_parent"
            android:layout_height="30.0dip"
            android:layout_marginTop="10.0dip"
            android:gravity="center|left"
            android:paddingLeft="50.0dip"
            android:text="@string/confirm_exit"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16.0sp" />

        <LinearLayout
            android:id="@+id/exit_buttons"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:gravity="right"
            android:paddingRight="10dip">
            <Button
                android:id="@+id/yes"
                style="@style/button_exit"
                android:layout_alignParentRight="true"
                android:onClick="yesExitClick"
                android:layout_marginRight="20.0dip"
                android:text="@string/yes" />

            <Button
                android:id="@+id/no"
                style="@style/button_exit"
                android:onClick="noExitClick"
                android:text="@string/no" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bannerAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            ads:adSize="LARGE_BANNER"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
    </LinearLayout>
</RelativeLayout>
