<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hair_styles_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameActivity">




    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/bar_bg"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="@dimen/header_image_width"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@id/back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/header_image_height"
                android:background="#00ffffff"
                android:onClick="backClick"
                android:scaleType="centerInside"
                android:src="@drawable/back_edit" />

            <TextView
                android:id="@+id/back_text"
                style="@style/text_header_sticker"
                android:text="@string/label_back" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="@dimen/header_image_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <ImageButton
                android:id="@id/done"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/header_image_height"
                android:background="#00ffffff"
                android:onClick="saveImageClick"
                android:scaleType="centerInside"
                android:src="@drawable/done" />

            <TextView
                android:id="@+id/done_text"
                style="@style/text_header_sticker"
                android:layout_alignParentBottom="true"
                android:text="@string/label_done" />
        </RelativeLayout>

        <TextView
            style="@style/text_header"
            android:layout_centerInParent="true"
            android:text="@string/label_add_sticker" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/llFrameGroup"
        android:layout_below="@id/rlHeader"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/rlPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="matrix"
                android:src="@drawable/gai_xinh3" />


            <ImageView
                android:id="@+id/ivFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/suits_1" />
        </RelativeLayout>
    </RelativeLayout>

    <GridView
        android:id="@+id/gridViewFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llFrameGroup"
        android:layout_below="@id/rlHeader"
        android:layout_gravity="center"
        android:background="@color/bg_color"
        android:numColumns="3"
        android:visibility="gone" />



    <LinearLayout
        android:id="@+id/llFrameGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:layout_alignParentBottom="true"
        android:background="@color/bar_bg"
        android:orientation="horizontal"
        android:visibility="visible" />

    <include
        layout="@layout/layout_confirm_exit"
        android:visibility="gone" />


</RelativeLayout>